kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lego-data-ingress
  labels:
    app: lego-data-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lego-data-ingress
  template:
    metadata:
      name: lego-data-ingress
      labels:
        app: lego-data-ingress   # selector label (required)
        app.kubernetes.io/name: lego-data-ingress
        app.kubernetes.io/instance: sandbox
        app.kubernetes.io/version: "1.0.0"
        app.kubernetes.io/component: api
        app.kubernetes.io/part-of: lego-platform
    spec:
      containers:
        - name: lego-data-ingress
          image: quay.io/tvattima/lego-data-ingress
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP

#          startupProbe:
#            httpGet:
#              path: /actuator/health/liveness
#              port: 8080
#            failureThreshold: 60   # 60 × 5s = 300s max startup
#            periodSeconds: 5
#            timeoutSeconds: 2

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 10

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 5

          volumeMounts:
            - name: services-sandbox-external-secret
              mountPath: /etc/.credentials
              readOnly: true
      volumes:
        - name: services-sandbox-external-secret
          secret:
            secretName: services-sandbox-external-secret
      restartPolicy: Always
